[gd_scene load_steps=2 format=3 uid="uid://4qn3y3t5kqnt"]

[ext_resource type="Script" uid="uid://hgwt4ij13jsa" path="res://scripts/idle_defense/battle_arena.gd" id="1"]

[node name="BattleArena" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 0.95)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_right = 2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Title" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 20
text = "⚔ BATTLE IN PROGRESS ⚔"
horizontal_alignment = 1

[node name="MainContent" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 5

[node name="BattlefieldContainer" type="HBoxContainer" parent="MarginContainer/VBox/MainContent"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8
alignment = 1

[node name="KnightsCenter" type="CenterContainer" parent="MarginContainer/VBox/MainContent/BattlefieldContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="KnightsContainer" type="GridContainer" parent="MarginContainer/VBox/MainContent/BattlefieldContainer/KnightsCenter"]
layout_mode = 2
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 5
columns = 5

[node name="DragonsCenter" type="CenterContainer" parent="MarginContainer/VBox/MainContent/BattlefieldContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DragonsContainer" type="GridContainer" parent="MarginContainer/VBox/MainContent/BattlefieldContainer/DragonsCenter"]
layout_mode = 2
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 5
columns = 5

[node name="CombatLogPanel" type="PanelContainer" parent="MarginContainer/VBox/MainContent"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBox/MainContent/CombatLogPanel"]
layout_mode = 2
follow_focus = true
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="CombatLog" type="RichTextLabel" parent="MarginContainer/VBox/MainContent/CombatLogPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 13
bbcode_enabled = true
text = "Waiting for battle..."
fit_content = true

[node name="BackButton" type="Button" parent="MarginContainer/VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 40)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 15
text = "BACK TO FACTORY"
